--- a/RetroCalculator/Base.lproj/LaunchScreen.storyboard
+++ b/RetroCalculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +20,56 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="7cw-bF-ccs">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="s9k-qs-b6A">
+                                <rect key="frame" x="0.0" y="522" width="375" height="145"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="145" id="pqJ-JF-DEG"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="rFN-23-kca">
+                                <rect key="frame" x="16" y="28" width="343" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="UPs-Zm-dSZ"/>
+                                    <constraint firstAttribute="height" constant="75" id="dl2-3U-oHy"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="4NQ-gv-9S6">
+                                <rect key="frame" x="67.5" y="111" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="AQV-60-Hji"/>
+                                    <constraint firstAttribute="width" constant="240" id="WcV-pf-e8U"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rFN-23-kca" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4Sp-Cs-5Kl"/>
+                            <constraint firstAttribute="trailing" secondItem="s9k-qs-b6A" secondAttribute="trailing" id="6yd-yS-9P5"/>
+                            <constraint firstItem="s9k-qs-b6A" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="7hK-OC-TpT"/>
+                            <constraint firstItem="7cw-bF-ccs" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="9G2-pV-bov"/>
+                            <constraint firstItem="4NQ-gv-9S6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PtK-PC-een"/>
+                            <constraint firstItem="4NQ-gv-9S6" firstAttribute="top" secondItem="rFN-23-kca" secondAttribute="bottom" constant="8" id="Pzt-f9-ATn"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="s9k-qs-b6A" secondAttribute="bottom" id="QfZ-ME-7GB"/>
+                            <constraint firstItem="rFN-23-kca" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" id="TYZ-kf-sJT"/>
+                            <constraint firstAttribute="trailing" secondItem="7cw-bF-ccs" secondAttribute="trailing" id="VLM-8b-QjM"/>
+                            <constraint firstItem="7cw-bF-ccs" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="bko-U4-kdu"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="7cw-bF-ccs" secondAttribute="bottom" id="imr-xX-Luv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="47.200000000000003" y="372.86356821589209"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
